--- a/Investimentos/Investimentos/Investimentos.csproj
+++ b/Investimentos/Investimentos/Investimentos.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{9F04CB85-E075-4370-A1A0-CEBA846B9D7D}</ProjectGuid>
+    <ProjectGuid>{8688B222-A808-4E68-A751-959DB507BCD2}</ProjectGuid>
     <OutputType>WinExe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Empresa.DesignPatterns</RootNamespace>
-    <AssemblyName>DesignPatterns</AssemblyName>
+    <RootNamespace>Empresa.Investimentos</RootNamespace>
+    <AssemblyName>Investimentos</AssemblyName>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
@@ -52,14 +52,11 @@
     <Compile Include="Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
-    <Compile Include="Impostos\CalculadorDeImpostos.cs" />
-    <Compile Include="Impostos\ICC.cs" />
-    <Compile Include="Impostos\ICMS.cs" />
-    <Compile Include="Impostos\Imposto.cs" />
-    <Compile Include="Impostos\ISS.cs" />
-    <Compile Include="Vendas\Descontos\Desconto.cs" />
-    <Compile Include="Vendas\Item.cs" />
-    <Compile Include="Vendas\Orcamento.cs" />
+    <Compile Include="Investimentos\Arrojado.cs" />
+    <Compile Include="Investimentos\CalculadorDeInvestimentos.cs" />
+    <Compile Include="Investimentos\Conservador.cs" />
+    <Compile Include="Investimentos\Investimento.cs" />
+    <Compile Include="Investimentos\Moderado.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="Form1.resx">
@@ -88,7 +85,6 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
-  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
