Adicionando o padrão decorator nos impostos.

--- a/DesignPatterns/DesignPatterns/DesignPatterns.csproj
+++ b/DesignPatterns/DesignPatterns/DesignPatterns.csproj
@@ -59,6 +59,7 @@
     <Compile Include="Impostos\IHIT.cs" />
     <Compile Include="Impostos\IKCV.cs" />
     <Compile Include="Impostos\Imposto.cs" />
+    <Compile Include="Impostos\ImpostoMuitoAlto.cs" />
     <Compile Include="Impostos\ISS.cs" />
     <Compile Include="Impostos\TemplateImposto.cs" />
     <Compile Include="Vendas\Descontos\CalculadorDeDescontos.cs" />
